@@ -1,7 +1,7 @@
 {
   "name": "beerplop",
   "license": "MIT",
-  "beerplopversion": "1.66.2",
+  "beerplopversion": "1.67.0",
   "userversion": "3.1.4",
   "author": "Enno Woortmann",
   "dependencies": {
