@@ -2,4 +2,5 @@
 const CV_BEER_BANK   = 'CV_BEER_BANK',
       CV_MANUAL_PLOP = 'CV_MANUAL_PLOP',
       CV_BOTTLE_CAP  = 'CV_BOTTLE_CAP',
-      CV_MANA        = 'CV_MANA';
+      CV_MANA        = 'CV_MANA',
+      CV_FACTORY     = 'CV_FACTORY';
