@@ -2546,6 +2546,9 @@
     "holyUpgrade.bb_woodruff.title": "Woodruff",
     "holyUpgrade.bb_woodruff.description": "Ecological beer for the beer drinker of tomorrow",
     "holyUpgrade.bb_woodruff.effect": "Unlocks a new ingredient at the Beer Blender Bar",
+    "holyUpgrade.bb_egg.title": "Egg",
+    "holyUpgrade.bb_egg.description": "Apparently there are people who enjoy warm beer with egg.",
+    "holyUpgrade.bb_egg.effect": "Unlocks a new ingredient at the Beer Blender Bar",
     "holyUpgrade.bb_preset1.title": "Take notes on the beermat",
     "holyUpgrade.bb_preset1.description": "Remember your most delicious cocktail by writing down the recipe",
     "holyUpgrade.bb_preset1.effect": "Allows you to create up to two presets for the Beer Blender Bar",
@@ -2608,6 +2611,8 @@
     "beerBlender.buildingsUp": "Buildings are <b>__%</b> more expensive",
     "beerBlender.manaUp": "Mana production is raised by <b>__%</b>",
     "beerBlender.manaDown": "Mana production is decreased by <b>__%</b>",
+    "beerBlender.factoryUp": "Beer Factory production is raised by <b>__%</b>",
+    "beerBlender.factoryDown": "Beer Factory production is decreased by <b>__%</b>",
     "beerBlender.apple": "Apple",
     "beerBlender.banana": "Banana",
     "beerBlender.lime": "Lime",
@@ -2618,6 +2623,7 @@
     "beerBlender.cherry": "Cherry",
     "beerBlender.blueberry": "Blueberry",
     "beerBlender.woodruff": "Woodruff",
+    "beerBlender.egg": "Egg",
     "beerBlender.description": "Mix various ingredients into your beer for achieving special effects.",
     "beerBlender.effects": "Current effects",
     "beerBlender.equipHint": "Equip ingredients to achieve effects",
