@@ -1,6 +1,10 @@
 **1.67.0**
+* Add a new ingredient to the Beer Blender Bar (#67)
+* Refactored Beer Factories to represent the current factory production, storage and transport multiplier as a ComposedValue
 * Bugfixes:
     - Equipping the Blueberry at the Beer Blender Bar leads to a NaN Mana per second display error
+    - Fix unique build equipments (#92)
+    - Fix auto cloning for Bottle Cap Factories (#95)
 
 **1.66.0** - 15.12.2019
 * Added cloning to Bottle Cap Factories (#87)
